src/test/ui/type-alias-impl-trait/generic_duplicate_param_use5.stderr
error[E0277]: `T` doesn't implement `std::fmt::Debug`
  --> $DIR/generic_duplicate_param_use5.rs:8:1
   |
LL | type Two<T, U> = impl Debug;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `T` cannot be formatted using `{:?}` because it doesn't implement `std::fmt::Debug`
LL | 
LL | fn two<T: Debug, U: Debug>(t: T, u: U) -> Two<T, U> {
   |        -- help: consider further restricting this bound: `T: std::fmt::Debug +`
LL |     (t, u)
   |     ------ this returned value is of type `(T, U)`
   |
   = help: the trait `std::fmt::Debug` is not implemented for `T`
   = note: required because of the requirements on the impl of `std::fmt::Debug` for `(T, U)`
   = note: the type `(T, U)` must only rely on bounds defined on the type

error[E0277]: `U` doesn't implement `std::fmt::Debug`
  --> $DIR/generic_duplicate_param_use5.rs:8:1
   |
LL | type Two<T, U> = impl Debug;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `U` cannot be formatted using `{:?}` because it doesn't implement `std::fmt::Debug`
LL | 
LL | fn two<T: Debug, U: Debug>(t: T, u: U) -> Two<T, U> {
   |                  -- help: consider further restricting this bound: `U: std::fmt::Debug +`
LL |     (t, u)
   |     ------ this returned value is of type `(T, U)`
   |
   = help: the trait `std::fmt::Debug` is not implemented for `U`
   = note: required because of the requirements on the impl of `std::fmt::Debug` for `(T, U)`
   = note: the type `(T, U)` must only rely on bounds defined on the type

error[E0277]: `U` doesn't implement `std::fmt::Debug`
  --> $DIR/generic_duplicate_param_use5.rs:8:1
   |
LL | type Two<T, U> = impl Debug;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `U` cannot be formatted using `{:?}` because it doesn't implement `std::fmt::Debug`
...
LL | fn three<T: Debug, U: Debug>(t: T, u: U) -> Two<T, U> {
   |                    -- help: consider further restricting this bound: `U: std::fmt::Debug +`
LL |
LL |     (u, t)
   |     ------ this returned value is of type `(U, T)`
   |
   = help: the trait `std::fmt::Debug` is not implemented for `U`
   = note: required because of the requirements on the impl of `std::fmt::Debug` for `(U, T)`
   = note: the type `(U, T)` must only rely on bounds defined on the type

error[E0277]: `T` doesn't implement `std::fmt::Debug`
  --> $DIR/generic_duplicate_param_use5.rs:8:1
   |
LL | type Two<T, U> = impl Debug;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `T` cannot be formatted using `{:?}` because it doesn't implement `std::fmt::Debug`
...
LL | fn three<T: Debug, U: Debug>(t: T, u: U) -> Two<T, U> {
   |          -- help: consider further restricting this bound: `T: std::fmt::Debug +`
LL |
LL |     (u, t)
   |     ------ this returned value is of type `(U, T)`
   |
   = help: the trait `std::fmt::Debug` is not implemented for `T`
   = note: required because of the requirements on the impl of `std::fmt::Debug` for `(U, T)`
   = note: the type `(U, T)` must only rely on bounds defined on the type

error: concrete type differs from previous defining opaque type use
  --> $DIR/generic_duplicate_param_use5.rs:14:1
   |
LL | / fn three<T: Debug, U: Debug>(t: T, u: U) -> Two<T, U> {
LL | |
LL | |     (u, t)
LL | | }
   | |_^ expected `(T, U)`, got `(U, T)`
   |
note: previous use here
  --> $DIR/generic_duplicate_param_use5.rs:10:1
   |
LL | / fn two<T: Debug, U: Debug>(t: T, u: U) -> Two<T, U> {
LL | |     (t, u)
LL | | }
   | |_^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0277`.
